<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_text_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jiahaoliuliu.simpleespressotest.SimpleDrawerActivity"
    tools:showIn="@layout/app_bar_simple_drawer"
    android:gravity="center"
    style="?android:attr/textAppearanceLarge"
    />