<resources>
    <string name="app_name">SimpleEspressoTest</string>

    <!-- Activities names -->
    <string name="simple_button_activity">Simple button activity</string>
    <string name="simple_check_boxes_activity">Simple check boxes activity</string>
    <string name="simple_edit_text_activity">Simple edit text activity</string>
    <string name="simple_sliding_menu_activity">Simple sliding menu activity</string>
    <string name="simple_drawer_activity">Simple drawer activity</string>
    <string name="simple_pop_up_list_dialog_activity">Simple pop up list dialog activity</string>
    <string name="simple_pop_up_yes_no_dialog_activity">Simple pop up yes/no boxes activity</string>
    <string name="simple_radio_buttons_activity">Simple radio buttons activity</string>
    <string name="simple_web_view_activity">Simple web view activity</string>
    <string name="activity_as_dialog_activity">Activity as dialog</string>

    <!-- Simple button activity -->
    <string name="simple_button">Click me!</string>
    <string name="simple_text_view">Click on the button!</string>
    <string name="simple_text_view_clicked">Tachan!</string>

    <!-- Simple check boxes activity -->
    <string name="check_box_1">Check box 1</string>
    <string name="check_box_2">Check box 2</string>
    <string name="check_box_3">Check box 3</string>
    <string name="check_box_4">Check box 4</string>
    <string name="check_box_5">Check box 5</string>
    <string name="check_box_6">Check box 6</string>
    <string name="check_box_7">Check box 7</string>

    <!-- Simple edit text activity -->
    <string name="copy_button">Copy</string>

    <!-- Simple radio buttons activity -->
    <string name="radio_button_1">Radio button 1</string>
    <string name="radio_button_2">Radio button 2</string>
    <string name="radio_button_3">Radio button 3</string>
    <string name="radio_button_4">Radio button 4</string>
    <string name="radio_button_5">Radio button 5</string>
    <string name="radio_button_6">Radio button 6</string>
    <string name="radio_button_7">Radio button 7</string>

    <!-- Simple pop up yes no dialog activity -->
    <string name="display_pop_up_button">Show pop up</string>
    <string name="alert_dialog_title">Alert!</string>
    <string name="alert_dialog_message">Are you happy?</string>

    <!-- Simple pop up list dialog activity -->
    <string name="alert_dialog_language_title">Choose your language</string>
    <string name="list_option_1">English</string>
    <string name="list_option_2">Arabic</string>
    <string name="list_option_3">Urdu</string>
    <string name="list_option_4">Turk</string>
    <string name="list_option_5">Chinese</string>
    <string name="action_bar_open_menu">Open menu</string>
    <string name="title_activity_simple_drawer">SimpleDrawerActivity</string>

    <!-- Simple drawer activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_camera">Camera</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_slideshow">Slide show</string>
    <string name="nav_manage">Tools</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>

    <!-- Activity as dialog activity -->
    <string name="display_dialog">Display dialog</string>
    <string name="dialog_activity_message">This is a dialog</string>
    <string name="dialog_activity_button">Close</string>

</resources>
