<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tests_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jiahaoliuliu.simpleespressotest.MainActivity"
    />